--- a/public/static/htmls/links1.html
+++ b/public/static/htmls/links1.html
@@ -3,12 +3,16 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>links1</title>
 </head>
+<link rel="stylesheet" href="../css/admin.css" type="text/css">
 <body>
 <ul>
-<button><a href="../../Departments/departments/departments.html" target="content">Check Department</a></button>
-<li><a href="ch2.html" target="content">Introduce to CSS</a></li>
-<li><a href="ch3.html" target="content">Tables and Frames</a></li>
-<li><a href="ch4.html" target="content">Working with Scriot</a></li>
+<li><a class="links" href="../../Departments/departments/departments.html" target="content">Check Departments</a></li>
+<li><a class="links" href="../../Product/product/product.html" target="content">Check Products</a></li>
+<li><a class="links" href="../../Product/product/product.html" target="content">Check Staff</a></li>
+<li><a class="links" href="../../Product/product/product.html" target="content">Check Customers</a></li>
+<li><a class="links" href="../../Product/product/product.html" target="content">Check Orderlists</a></li>
+<li><a class="links" href="../../Product/product/product.html" target="content">Check Aftersalelists</a></li>
+
 </ul>
 </body>
 </html>
