--- a/public/static/htmls/links1.html
+++ b/public/static/htmls/links1.html
@@ -6,12 +6,12 @@
 <link rel="stylesheet" href="../css/admin.css" type="text/css">
 <body>
 <ul>
-<li><a class="links" href="../../Departments/departments/departments.html" target="content">Check Departments</a></li>
-<li><a class="links" href="../../Product/product/product.html" target="content">Check Products</a></li>
-<li><a class="links" href="../../Product/product/product.html" target="content">Check Staff</a></li>
-<li><a class="links" href="../../Product/product/product.html" target="content">Check Customers</a></li>
-<li><a class="links" href="../../Product/product/product.html" target="content">Check Orderlists</a></li>
-<li><a class="links" href="../../Product/product/product.html" target="content">Check Aftersalelists</a></li>
+<li id="link1"><a  class="links" href="../../Departments/departments/departments.html" target="content">Check Departments</a></li>
+<li><a class="links" href="../../products/products/products.html" target="content">Check Products</a></li>
+<li><a class="links" href="../../staff/staff/staff.html" target="content">Check Staff</a></li>
+<li><a class="links" href="../../customer/Information/information" target="content">Check Customers</a></li>
+<li><a class="links" href="../../customOrder/Information/information" target="content">Check Orderlists</a></li>
+<li><a class="links" href="" target="content">Check Aftersalelists</a></li>
 
 </ul>
 </body>
